# neural_collision_detection

./: .gitignore  .gitmodules  AP120614_s3c1.mtl  Makefile  README.md  bounding_box.hpp  collision.cpp  collision.hpp  collision_manager.cpp  collision_manager.hpp  collisions_26_11.npz  cube.hpp  fcl.hpp  main.cpp  model.cpp  model.hpp  ncd  neuron_layers.pickle  program.cpp  program.hpp  result_object.cpp  result_object.hpp  setup.py
src/cgal-python-bindings/: CMakeLists.txt  README.md
src/cgal-python-bindings/presentations/PYBIND_19/: comparison.tex  pybind.tex
src/cgal-python-bindings/src/: CMakeLists.txt
src/cgal-python-bindings/src/bench/function_call_bench/: Instructions.txt  binding_bench.py  results.txt  square_swig.py
src/cgal-python-bindings/src/bench/function_call_bench/boost/: CMakeLists.txt  square_boost.cpp
src/cgal-python-bindings/src/bench/function_call_bench/pybind11/: CMakeLists.txt  square.cpp
src/cgal-python-bindings/src/bench/function_call_bench/swig/: square_swig.h  square_swig.i
src/cgal-python-bindings/src/bench/max_cover_bench/: instructions.txt  results.txt
src/cgal-python-bindings/src/bench/max_cover_bench/boost/: max_cover_boost.py  points.txt  points_circle_128.txt  points_circle_14.txt  points_circle_16.txt  points_circle_256.txt  points_circle_4.txt  points_circle_5.txt  points_circle_512.txt  points_circle_64.txt  points_circle_9.txt  points_circle_ap_12.txt  points_circle_ap_14.txt  points_circle_ap_2048.txt  points_circle_ap_22.txt  points_circle_ap_24.txt  points_circle_ap_256.txt  points_circle_ap_26.txt  points_circle_ap_32.txt  points_grid_16.txt  points_grid_400.txt  points_grid_961.txt
src/cgal-python-bindings/src/bench/max_cover_bench/boost/src/: max_cover.cpp
src/cgal-python-bindings/src/bench/max_cover_bench/pybind11/: max_cover_pybind11.py  points_circle_10.txt  points_circle_1024.txt  points_circle_11.txt  points_circle_12.txt  points_circle_13.txt  points_circle_15.txt  points_circle_3.txt  points_circle_32.txt  points_circle_6.txt  points_circle_7.txt  points_circle_8.txt  points_circle_ap_10.txt  points_circle_ap_1024.txt  points_circle_ap_128.txt  points_circle_ap_16.txt  points_circle_ap_18.txt  points_circle_ap_20.txt  points_circle_ap_28.txt  points_circle_ap_30.txt  points_circle_ap_512.txt  points_circle_ap_6.txt  points_circle_ap_64.txt  points_circle_ap_8.txt  points_grid_144.txt  points_mix_63.txt
src/cgal-python-bindings/src/bench/max_cover_bench/pybind11/src/: max_cover.cpp
src/cgal-python-bindings/src/bench/shared_ptr_bench/: Instructions.txt  results.txt  shared_ptr_bench.py
src/cgal-python-bindings/src/libs/: CMakeLists.txt
src/cgal-python-bindings/src/libs/binding_examples_boost/arrangement_2_edge_insertion_example_boost/: Arrangement_2.cpp  edge_insertion.py
src/cgal-python-bindings/src/libs/binding_examples_boost/boost_python_template/: Source.cpp
src/cgal-python-bindings/src/libs/binding_examples_boost/boost_python_templated_class/: TClass.cpp
src/cgal-python-bindings/src/libs/binding_examples_boost/boost_sp/: boost_sp.cpp
src/cgal-python-bindings/src/libs/binding_examples_boost/dcel_extension_boost/: Arrangement_2.cpp
src/cgal-python-bindings/src/libs/binding_examples_boost/polygon_2_boost/: Polygon_2.cpp
src/cgal-python-bindings/src/libs/binding_examples_boost/square_boost/: square_boost.cpp
src/cgal-python-bindings/src/libs/binding_examples_pybind11/arrangement_2_edge_insertion_example/: Arrangement_2.sln
src/cgal-python-bindings/src/libs/binding_examples_pybind11/dcel_extension_pybind11/: Arrangement_2.cpp  dcel_extension.py
src/cgal-python-bindings/src/libs/binding_examples_pybind11/point_2_Simple_cartesian_int/: Point_2.cpp
src/cgal-python-bindings/src/libs/binding_examples_pybind11/pybind11_Point_2_simple_cartesian_int/: Point_2.cpp
src/cgal-python-bindings/src/libs/binding_examples_pybind11/pybind11_Segment_2/: Segment_2.cpp
src/cgal-python-bindings/src/libs/binding_examples_pybind11/pybind11_polygon_EPIEC/: Polygon_2.cpp
src/cgal-python-bindings/src/libs/binding_examples_pybind11/pybind11_template/: Source.cpp
src/cgal-python-bindings/src/libs/binding_examples_pybind11/segment_2_simple_cartesian_int/: Segment_2.cpp
src/cgal-python-bindings/src/libs/binding_examples_pybind11/shared_pointer_pybind11/: sp_pybind11.cpp
src/cgal-python-bindings/src/libs/cgalpy/: CMakeLists.txt  Doxyfile.in
src/cgal-python-bindings/src/libs/cgalpy/include/CGALPY/: Python_functor.hpp  (+6 more)
src/cgal-python-bindings/src/libs/cgalpy/lib/: Arr_algebraic_segment_traits_bindings_temp.cpp  arr_Bezier_curve_traits_bindings.cpp  arr_algebraic_segment_traits_bindings.cpp  arr_circle_segment_traits_bindings.cpp  arr_conic_traits_bindings.cpp  arr_linear_traits_bindings.cpp  arr_non_caching_segment_traits_bindings.cpp  arr_segment_traits_bindings.cpp  arrangement_2_bindings.cpp  boolean_set_operations_2_bindings.cpp  bounding_volumes_bindings.cpp  convex_hull_2_bindings.cpp  export_module.cpp  face_bindings.cpp  general_polygon_2_bindings.cpp  general_polygon_set_2_bindings.cpp  general_polygon_with_holes_2_bindings.cpp  halfedge_bindings.cpp  intersections_2_bindings.cpp  kernel_bindings.cpp  minkowski_sum_2_bindings.cpp  object_bindings.cpp  point_location_bindings.cpp  polygon_2_bindings.cpp  polygon_partitioning_bindings.cpp  polygon_set_2_bindings.cpp  polygon_with_holes_2_bindings.cpp  spatial_searching_bindings.cpp  triangulation_2_bindings.cpp  vertex_bindings.cpp
src/cgal-python-bindings/src/libs/shared_vector/: CMakeLists.txt
src/cgal-python-bindings/src/libs/shared_vector/lib/: shared_vector.cpp
src/cgal-python-bindings/src/libs/tri3/: CMakeLists.txt  Doxyfile.in
src/cgal-python-bindings/src/libs/tri3/lib/: alpha_shapes_3_bindings.cpp  export_module.cpp
src/cgal-python-bindings/src/libs/triangulations/: CMakeLists.txt
src/cgal-python-bindings/src/libs/triangulations/lib/: triangulations_bindings.cpp
src/cgal-python-bindings/src/python_scripts/: arr.py  as3_delaunay.py  as3_delaunay_exact.py  as3_delaunay_fast_location.py  as3_regular.py  shared_vector_example.py
(+344 files in other folders)
